--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-body {
+body, ul, h1 {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -26,6 +26,14 @@ td {
 .banner {
     height: 500px;
     background-image: url(../images/banner.png);
+    background-repeat: no-repeat;
+    background-size: 100% 500px;
+}
+
+.big-logo {
+    float: left;
+    width: 50%;
+    margin-top: 233px;
 }
 
 .button {
@@ -57,6 +65,8 @@ td {
     padding-left:20px;
     padding-right:20px;
     padding-top:20px;
+    float:right;
+    width: 50%;
 }
 
 .footer {
